--- a/.github/workflows/kernel-repos-mirror.yml
+++ b/.github/workflows/kernel-repos-mirror.yml
@@ -32,5 +32,5 @@ jobs:
         dst_token:  ${{ secrets.CODING_TOKEN }}
         force_update: true
         account_type: org
-        static_list: "linux-intel-lts2019-chromium,linux-intel-lts2019-yocto,linux-intel-lts,device-androidia-kernel,mainline-tracking"
+        static_list: "linux-intel-lts2019-chromium,linux-intel-lts2019-yocto,linux-intel-lts,device-androidia-kernel,mainline-tracking,linux-intel-lts2020-yocto,linux-intel-lts2020-chromium"
         cache_path: /github/workspace/jingdlu_kernel_mirror-cache
