--- a/.github/workflows/kernel-repos-mirror2.yml
+++ b/.github/workflows/kernel-repos-mirror2.yml
@@ -32,5 +32,5 @@ jobs:
         dst_token:  ${{ secrets.CODING_TOKEN }}
         force_update: true
         account_type: org
-        static_list: "linux-intel-lts2021-chromium,linux-intel-lts2022-chromium"
+        static_list: "linux-intel-lts2021-chromium,linux-intel-lts2022-chromium,linux-intel-lts2022"
         cache_path: /github/workspace/jingdlu_kernel_mirror2-cache
